WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47263
SVG feMorphology - big radii cause huge ImageBuffer sizes
https://bugs.webkit.org/show_bug.cgi?id=47263
Summary
SVG feMorphology - big radii cause huge ImageBuffer sizes
Dirk Schulze
Reported
2010-10-06 07:38:12 PDT
The current code in FEMorphology::determineAbsolutePaintRect was meant as an optimization, but I forgot to clip the calculated ImageBuffer size to the maxEffectSize. Easy to fix.
Attachments
Patch
(1.61 KB, patch)
2010-10-06 07:52 PDT
,
Dirk Schulze
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dirk Schulze
Comment 1
2010-10-06 07:52:54 PDT
Created
attachment 69939
[details]
Patch
Nikolas Zimmermann
Comment 2
2010-10-06 08:00:24 PDT
Comment on
attachment 69939
[details]
Patch You should mention this fixes the crashes on the windows & snowleopard bots.
Dirk Schulze
Comment 3
2010-10-06 08:17:21 PDT
Committed
r69194
: <
http://trac.webkit.org/changeset/69194
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug